@@ -6,6 +6,8 @@ Revision history for Perl extension Shlomif::NavMenu.
     into a single $args hash-ref.
     - Removed a use lib "." from HTML::Widgets::NavMenu - it's a leftover
     statement that could be a subtle bug.
+    - Refactoring: converted direct $self->{'field'} accesses to
+    accessors. (from all the classes).
 
 1.0201    Fri Mar 28 17:46:59 IDT 2008
     - Fixed a case where a non-capturing expand in a node inside a
